Add _history endpoint to Citation
