# swagger/swagger.json
@@ -174,6 +174,39 @@
         }
       }
     },
+    "/Citation/{id}/_history/{vid}": {
+      "get": {
+        "tags": [
+          "Citation"
+        ],
+        "summary": "Get Citation by id and version id",
+        "produces": [
+          "application/fhir+json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "vid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Citation"
+            }
+          }
+        }
+      }
+    },    
     "/CodeSystem/$get-mesh-children": {
       "get": {
         "tags": [
